variadics/tests/compile-fail-nightly/var_type_spread_badtype.rs
../compile-fail/var_type_spread_badtype.rs